@startuml

title __COMMANDS's Class Diagram__\n

  namespace Commands {
    class Commands.Command {
        - helpText : String
        + execute()
        + getHelp()
        + getPerm()
    }
  }
  

  namespace Commands {
    class Commands.CommandMap {
        - cmdMap : Map<String, Command>
        - nameList : String
        + containsKey()
        + get()
        + getNameList()
        + put()
    }
  }
  

  namespace Commands {
    class Commands.ErrorCommand {
        + throwCommandTimeOut()
        + throwFailedMessageProcessing()
        + throwMissingCommand()
    }
  }
  

  


  

  namespace Commands {
    interface Commands.ICommand {
        {abstract} + execute()
        {abstract} + getHelp()
        {abstract} + getPerm()
    }
  }
  


  

  namespace Commands {
    class Commands.PrefixCommand {
        + execute()
    }
  }
  

  Commands.Command .up.|> Commands.ICommand
  Commands.Command -up-|> net.dv8tion.jda.api.hooks.ListenerAdapter



  Commands.PrefixCommand -up-|> Commands.Command


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
